# QX2_Training

./: .gitignore  CMakeLists.txt  debug.sh  preprocess.py  release.sh  setup.py
share/cmake/Torch/: TorchConfig.cmake
src/: environment.cpp  main.cpp  model.cpp
